# phenopacket-ingest

./: .copier-answers.yml  .cruft.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  justfile  mkdocs.yaml  pyproject.toml
.github/workflows/: create-release.yaml  test.yaml
docs/: index.md
scripts/: generate-rdf.py  generate-report.py  get-latest-report.py
src/: transform.py  transform.yaml
src/phenopacket_ingest/: __init__.py  cli.py  config.py  download.yaml  metadata.yaml  models.py  parser.py  registry.py  transform.py  transform.yaml
src/phenopacket_ingest/models/: __init__.py  associations.py  interpretation.py  metadata.py  ontology.py  phenopacket.py
src/phenopacket_ingest/parser/: __init__.py  phenopacket_extractor.py  phenopacket_parser.py
src/phenopacket_ingest/registry/: __init__.py  downloader.py  registry_service.py
src/phenopacket_ingest/transformer/: __init__.py  phenopacket_transformer.py
tests/: __init__.py  test_entity_parsing.py  test_example.py  test_full_pipeline.py  test_models.py  test_parser.py  test_phenopacket_ingest.py  test_phenopacket_registry.py  test_registry.py  test_transform.py  test_with_real_data.py
tests/data/: phenopacket_genes.jsonl  test_transform.yaml
