[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "phenopacket_ingest"
description = "Ingesting phenopackets into the Monarch KG"
authors = [
  {name = "Monarch Initiative", email = "info@monarchinitiative.org"},
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dynamic = ["version"]

dependencies = [
  "koza>=2.0.0",
  "biolink-model>=4.0.0",
  "kghub-downloader>=0.3.11",
  "loguru",
  "phenopacket-store-toolkit>=0.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
